--- a/app/views/user/confirm.html.erb
+++ b/app/views/user/confirm.html.erb
@@ -1,2 +1,8 @@
 <h1>User#confirm</h1>
 <p>Find me in app/views/user/confirm.html.erb</p>
+<ul>
+  <li>name: <%= @user.name %> </li>
+  <li>都道府県: <%= @user.prefecture.name %> </li>
+  <li>性別: <%= @user.name %> </li>
+  <li>: <%= @user.name %> </li>
+</ul>
