--- a/app/views/user/new.html.erb
+++ b/app/views/user/new.html.erb
@@ -1,8 +1,19 @@
 <h1>User#index</h1>
 <p>Find me in app/views/user/index.html.erb</p>
+<% if @user.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= @user.errors.count %>件のエラーがあります。</h2>
+
+    <ul>
+    <% @user.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
 <%= form_for @user, :url => {:action => :create} do |f| %>
 <ul>
-<li><%= f.label :name %>：<%= f.text_field(:name) %></li>
+<li><%= f.label :name %>：<%= f.text_field(:name) %> <%= @user.errors.full_messages_for(:name) %></li>
 <li><%= f.label :gender %>:男:<%= f.radio_button(:gender, 1) %>
         女:<%= f.radio_button(:gender, 2) %>
 </li>
