認証ベースを作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,19 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div id="nav">
+        <% if current_user %>
+          <%= link_to "Profile", user_show_path(current_user.id) %>
+          <%= link_to "Logout", :logout, method: :post %>
+        <% else %>
+          <%= link_to "Register", user_new_path %>
+          <%= link_to "Login", :login %>
+        <% end %>
+      </div>
+      <div>
+        <p id="notice"><%= flash[:notice] %></p>
+        <p id="alert"><%= flash[:alert] %></p>
+      </div>
+      <%= yield %>
   </body>
 </html>
