ページネーションにデザイン適用

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
           <%= link_to "Profile", user_show_path(current_user.user_id) %>
           <%= link_to "Logout", :logout, method: :post %>
         <% else %>
-          <%= link_to "Register", user_new_path %>
+
+          <%= link_to "Register", user_new_path, class: "btn btn-lg btn-primary" %>
           <%= link_to "Login", :login %>
         <% end %>
       </div>
