--- a/app/views/spots/list.html.erb
+++ b/app/views/spots/list.html.erb
@@ -1,6 +1,6 @@
 <h1>Spots#list</h1>
 <p>Find me in app/views/spots/list.html.erb</p>
-
+<i class="fui-heart"></i>
 <ul>
 <% for model in @spots %>
   <li><%= model["name"]  %></li>
