--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -1,5 +1,5 @@
 <%= paginator.render do %>
-  <nav>
+  <div>
     <ul class="pagination">
       <%= first_page_tag unless current_page.first? %>
       <%= prev_page_tag unless current_page.first? %>
@@ -11,5 +11,5 @@
       <%= next_page_tag unless current_page.last? %>
       <%= last_page_tag unless current_page.last? %>
     </ul>
-  </nav>
+  </div>
 <% end %>
