--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,26 +3,15 @@
   <head>
     <title>RailsPractice</title>
     <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <div id="nav">
-        <% if current_user %>
-          <%= link_to "Profile", user_show_path(current_user.user_id) %>
-          <%= link_to "Logout", :logout, method: :post %>
-        <% else %>
-
-          <%= link_to "Register", user_new_path, class: "btn btn-lg btn-primary" %>
-          <%= link_to "Login", :login %>
-        <% end %>
-      </div>
-      <div>
-        <p id="notice"><%= flash[:notice] %></p>
-        <p id="alert"><%= flash[:alert] %></p>
-      </div>
+    <!-- navigation -->
+    <%= render 'layouts/navigation' %>
+    <div class="container">
       <%= yield %>
+    </div>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </body>
 </html>
