--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -1,2 +1,132 @@
 <h1>Spots#show</h1>
 <p>Find me in app/views/spots/show.html.erb</p>
+<div class="row">
+    <!-- Card Projects -->
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-image">
+                <img class="img-responsive" src="http://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">
+                <span class="card-title">Material Cards</span>
+            </div>
+
+            <div class="card-content">
+                <p>Cards for display in portfolio style material design by Google.</p>
+            </div>
+
+            <div class="card-action">
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+            </div>
+        </div>
+    </div>
+    <!-- Card Projects -->
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-image">
+                <img class="img-responsive" src="http://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">
+                <span class="card-title">Material Cards</span>
+            </div>
+
+            <div class="card-content">
+                <p>Cards for display in portfolio style material design by Google.</p>
+            </div>
+
+            <div class="card-action">
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+            </div>
+        </div>
+    </div>
+    <!-- Card Projects -->
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-image">
+                <img class="img-responsive" src="http://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">
+                <span class="card-title">Material Cards</span>
+            </div>
+
+            <div class="card-content">
+                <p>Cards for display in portfolio style material design by Google.</p>
+            </div>
+
+            <div class="card-action">
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+            </div>
+        </div>
+    </div>
+    <!-- Card Projects -->
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-image">
+                <img class="img-responsive" src="http://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">
+                <span class="card-title">Material Cards</span>
+            </div>
+
+            <div class="card-content">
+                <p>Cards for display in portfolio style material design by Google.</p>
+            </div>
+
+            <div class="card-action">
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+            </div>
+        </div>
+    </div>
+    <!-- Card Projects -->
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-image">
+                <img class="img-responsive" src="http://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">
+                <span class="card-title">Material Cards</span>
+            </div>
+
+            <div class="card-content">
+                <p>Cards for display in portfolio style material design by Google.</p>
+            </div>
+
+            <div class="card-action">
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+            </div>
+        </div>
+    </div>
+    <!-- Card Projects -->
+    <div class="col-md-4">
+        <div class="card">
+            <div class="card-image">
+                <img class="img-responsive" src="http://material-design.storage.googleapis.com/publish/v_2/material_ext_publish/0Bx4BSt6jniD7TDlCYzRROE84YWM/materialdesign_introduction.png">
+                <span class="card-title">Material Cards</span>
+            </div>
+
+            <div class="card-content">
+                <p>Cards for display in portfolio style material design by Google.</p>
+            </div>
+
+            <div class="card-action">
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+                <a href="#" target="new_blank">Link</a>
+            </div>
+        </div>
+    </div>
+
+
+</div>
