--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,11 @@
 
   <body>
     <!-- navigation -->
-    <%= render 'layouts/navigation' %>
-    <div class="container">
-      <%= yield %>
+    <div>
+      <%= render 'layouts/navigation' %>
+      <div class="container">
+        <%= yield %>
+      </div>
     </div>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </body>
