--- a/app/views/spots/conditions.html.erb
+++ b/app/views/spots/conditions.html.erb
@@ -1,2 +1,10 @@
-<h1>Spots#conditions</h1>
-<p>Find me in app/views/spots/conditions.html.erb</p>
+<div class="row">
+  <div class="col-md-3"></div>
+  <div class="col-md-6">
+    <h1>User#index</h1>
+    <p>Find me in app/views/user/index.html.erb</p>
+
+    <%= render 'form' %>
+  </div>
+  <div class="col-md-3"></div>
+</div>
