検索一覧連携

--- a/app/views/spots/_form.html.erb
+++ b/app/views/spots/_form.html.erb
@@ -1,33 +1,46 @@
-<h1>エリア</h1>
-<%= form_for @spot_form, :url => {:action => :conditions}, :method => "get" do |f| %>
-<%= f.collection_select :prefecture_id, @prefectures, :id, :name, {} ,{:class => "form-control select select-primary select-block mbl"}  %>
-<h1>カテゴリ</h1>
-<table>
-<tbody>
-<% @categories.each do |c| %>
-  <tr>
-  <th><%= c.name %></th>
-  <td>
-    <ul class="list-inline">
-  <% c.genres.each do |g| %>
-  <li>
-  <% genre_checked = false %>
-    <% @spot_form.genre_ids.each do |gid| %>
-      <% if gid == g.id.to_s %>
-        <% genre_checked = true %>
-        <% break %>
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">タイトル</h4>
+      </div>
+      <div class="modal-body">
+
+      <h1>エリア</h1>
+      <%= form_for @spot_form, :url => {:action => :list}, :method => "get" do |f| %>
+      <%= f.collection_select :prefecture_id, @prefectures, :id, :name, {} ,{:class => "form-control select select-primary select-block mbl"}  %>
+      <h1>カテゴリ</h1>
+      <table>
+      <tbody>
+      <% @categories.each do |c| %>
+        <tr>
+        <th><%= c.name %></th>
+        <td>
+          <ul class="list-inline">
+        <% c.genres.each do |g| %>
+        <li>
+        <% genre_checked = false %>
+          <% @spot_form.genre_ids.each do |gid| %>
+            <% if gid == g.id.to_s %>
+              <% genre_checked = true %>
+              <% break %>
+            <% end %>
+          <% end %>
+          <label class="checkbox" for="checkbox">
+            <%= f.check_box(:genre_ids, {multiple: true, checked: genre_checked, class: "custom-checkbox", data: {toggle: "checkbox"}}, g.id) %><%= g.name %>
+          </label>
+        </li>
+        <% end %>
+      </ul>
+      </td>
+      </tr>
       <% end %>
-    <% end %>
-    <label class="checkbox" for="checkbox">
-      <%= f.check_box(:genre_ids, {multiple: true, checked: genre_checked, class: "custom-checkbox", data: {toggle: "checkbox"}}, g.id) %><%= g.name %>
-    </label>
-  </li>
-  <% end %>
-</ul>
-</td>
-</tr>
-<% end %>
-</tbody>
-</table>
-<%= submit_tag "検索する", class: "btn btn-primary btn-lg btn-block" %>
-<% end %>
+      </tbody>
+      </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+        <%= submit_tag "検索する", name: nil, class: "btn btn-primary" %>
+      </div>
+      <% end %>
+
+    </div>
