会員情報更新処理

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,8 @@
 @import "bootstrap";
 @import 'flat-ui';
 $icon-font-path: "bootstrap-sass/assets/fonts/bootstrap/";
+
+.contents {
+  margin-top: 100px;
+  margin-bottom:  100px;
+}
