--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,10 +18,10 @@
     </form>
     <ul class="nav navbar-nav navbar-right">
       <% if current_user %>
-        <li style=""><%= link_to "Profile", user_show_path(current_user.user_id) %></li>
+        <li style=""><%= link_to "Profile", user_show_path %></li>
         <li><%= link_to "Logout", :logout, method: :post %></li>
       <% else %>
-        <li><%= link_to "Register", user_new_path %></li>
+        <li><%= link_to "Register", user_new_path, data: { no_turbolink: true }  %></li>
         <li><%= link_to "Login", :login %></li>
       <% end %>
     </ul>
