--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
     <div>
       <%= render 'layouts/navigation' %>
       <div class="container">
-        <%= yield %>
+        <div class="contents">
+          <%= yield %>
+        </div>
       </div>
     </div>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
