--- a/app/views/user/edit.html.erb
+++ b/app/views/user/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-2"></div>
   <div class="col-md-8">
-    <h1>会員登録</h1>
+    <h1>会員編集</h1>
     <%= render 'form' %>
   </div>
   <div class="col-md-2"></div>
