--- a/app/assets/stylesheets/spots.scss
+++ b/app/assets/stylesheets/spots.scss
@@ -61,6 +61,28 @@
   text-decoration: none;
 }
 
+*, *:before, *:after {box-sizing:  border-box !important;}
+
+
+.row {
+ -moz-column-width: 18em;
+ -webkit-column-width: 18em;
+ -moz-column-gap: 1em;
+ -webkit-column-gap:1em;
+
+}
+
+.item {
+ display: inline-block;
+ padding:  .25rem;
+ width:  100%;
+}
+
+.well {
+ position:relative;
+ display: block;
+}
+
 // img{
 //    max-width: 300px;
 //    height: 300px;
