--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,20 +1,20 @@
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-01">
       <span class="sr-only">Toggle navigation</span>
     </button>
-    <a class="navbar-brand" href="#">Festival Search</a>
+    <a class="navbar-brand" href="#">Rails Practice</a>
   </div>
   <div class="collapse navbar-collapse" id="navbar-collapse-01">
     <form class="navbar-form navbar-left" action="#" role="search">
-      <div class="form-group">
+      <!-- <div class="form-group">
         <div class="input-group">
           <input class="form-control" id="navbarInput-01" type="search" placeholder="Search">
           <span class="input-group-btn">
             <button type="submit" class="btn"><span class="fui-search"></span></button>
           </span>
         </div>
-      </div>
+      </div> -->
     </form>
     <ul class="nav navbar-nav navbar-right">
       <% if current_user %>
