--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -16,6 +16,6 @@ nav.navbar.navbar-inverse.navbar-fixed-top[role="navigation"]
           = link_to "Logout", :logout, method: :post
       - else
         li
-          = link_to "Register", user_new_path, data: { no_turbolink: true }
+          = link_to "Signin", user_new_path, data: { no_turbolink: true }
         li
           = link_to "Login", :login
